Finished all the query settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="dateButtonTxt">Select Date</string>
+    <string name="sportsTxt">Sports</string>
+    <string name="fashionTxt"><![CDATA[Fashion & Style]]></string>
+    <string name="artsTxt">Arts</string>
 </resources>
